[package]
name = "slipped10"
version = "0.4.6"
authors = ["Ngo Iok Ui <wusyong9104@gmail.com>", "dj8yf0μl"]
edition = "2021"
description = "SLIP-0010 : ed25519 private key derivation from master private key"
homepage = "https://github.com/dj8yfo/slipped10"
repository = "https://github.com/dj8yfo/slipped10"
keywords = ["slip-0010", "slip-10", "slip10"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "2", default-features = false }
hmac = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }

[dev-dependencies]
hex = "0.4"
